--- a/vercel.json
+++ b/vercel.json
@@ -4,15 +4,15 @@
   "outputDirectory": "dist/public",
   "installCommand": "npm install",
   "framework": null,
+  "functions": {
+    "api/chat.cjs": {
+      "runtime": "nodejs18.x"
+    },
+    "api/status.cjs": {
+      "runtime": "nodejs18.x"
+    }
+  },
   "rewrites": [
-    {
-      "source": "/api/chat",
-      "destination": "/api/chat"
-    },
-    {
-      "source": "/api/status",
-      "destination": "/api/status"
-    },
     {
       "source": "/(.*)",
       "destination": "/index.html"
